5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2569.log
== SUBMITION (2019-06-12 22:01:28) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
		i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- EXECUTION TIME:
0.645035
-- ERROR:
  File "/home/codebench/codes/1800/2569/main.py", line 6
    for y in v:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:01:48) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
		i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
File "XXXX", line 6
    for y in v:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:02:19) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
		i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- EXECUTION TIME:
0.988582
-- ERROR:
  File "/home/codebench/codes/1800/2569/main.py", line 6
    for y in v:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:02:37) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- EXECUTION TIME:
0.6258
-- ERROR:
  File "/home/codebench/codes/1800/2569/main.py", line 6
    for y in v:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:02:40) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
File "XXXX", line 6
    for y in v:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:02:45) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
File "XXXX", line 6
    for y in v:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:03:46) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
 for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
File "XXXX", line 6
    for y in v:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:05:26) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:05:31) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- EXECUTION TIME:
1.20501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 8, in <module>
    i=sqrt(i/size(a)-1)	
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:05:37) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:05:42) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:06:07) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(a)-1)	
print(round(i, 3))
-- EXECUTION TIME:
1.04354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 8, in <module>
    i=sqrt(i/size(a)-1)	
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:07:50) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(v)-1)	
print(round(i, 3))
-- EXECUTION TIME:
0.933072
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:07:55) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
b=sum(v)/size(v)
i=0
for y in v:
	i=i+(y-b)**2
i=sqrt(i/size(v)-1)	
print(round(i, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:57:11) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
i=0
for y in v:
	i=i+(x-m)**2
i=sqrt(i/size(v)-1)	
print(round(i, 3))
-- EXECUTION TIME:
1.13481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 7, in <module>
    i=i+(x-m)**2
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:57:12) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
i=0
for y in v:
	i=i+(x-m)**2
i=sqrt(i/size(v)-1)	
print(round(i, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 22:59:04) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for y in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- EXECUTION TIME:
0.849104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2569/main.py", line 7, in <module>
    a=a+(x-m)**2
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:59:08) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for y in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:00:10) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for x in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- EXECUTION TIME:
1.04597
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:00:14) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for x in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:00:41) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for x in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- EXECUTION TIME:
1.08361
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
97.038
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
19.228
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:00:42) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for x in v:
	a=a+(x-m)**2
a=sqrt(a/size(v)-1)	
print(round(a, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:02:00) 
-- CODE:
from numpy import*
from math import*
v= array(eval(input("x: ")))
m=sum(v)/size(v)
a=0
for x in v:
	a=a+(x-m)**2
a=sqrt(a/(size(v)-1))
print(round(a, 3))
-- EXECUTION TIME:
1.18824
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
